# spacehub-rs

./: Cargo.toml  flake.nix
src/: config.rs  folders.rs  ldap.rs  main.rs  matrix.rs
src/matrix/: mod.rs
