[package]
name = "spacehub"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

[dependencies]
async-recursion = "*"
clap = {version = "3.0.0-rc.4", features = ["derive"]}
color-eyre = "*"
git2 = "*"
ldap3 = "*"
matrix-sdk = { git = "https://github.com/rissson/matrix-rust-sdk.git", branch = "matrix-sdk-0.4" }
minijinja = "*"
serde = "*"
serde_json = "*"
serde_yaml = "*"
synapse-admin-api = { git = "https://github.com/rissson/synapse-admin-api", branch = "users-create-modify-external-ids", features = ["client"] }
tempdir = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["json"] }
url = "*"
